# aline-kb-ingestor

./: .gitignore  Dockerfile  LICENSE  README.md  amplify.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  serverless.yml
backend/: base_scraper.py  celeryconfig.py  models.py  requirements.txt
backend/api/: main.py  tasks.py
backend/importers/: pdf_importer.py
backend/scrapers/: generic_scraper.py  google_drive_scraper.py  interviewing_blog.py  interviewing_guides.py  interviewing_topics.py  nil_mamano_dsa.py  substack_scraper.py
backend/tests/: test_blog_scraper.py
backend/utils/: html2md.py  logger.py
frontend/: next.config.js  package-lock.json  package.json  tsconfig.json
frontend/src/components/: IngestForm.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: index.tsx
frontend/styles/: globals.css
