[tool.poetry]
name = "aline-kb-ingestor"
version = "0.1.0"
description = "Ingest technical content into a KB for AI comment generation"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.13.2"
fastapi = "*"
uvicorn = { extras = ["standard"], version = "*" }
requests = "*"
beautifulsoup4 = "*"
html2text = "*"
pdfplumber = "*"
pydantic = "*"
celery = { extras = ["redis"], version = "*" }
redis = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
vcrpy = "*"
black = "*"
flake8 = "*"
isort = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
